--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,25 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html, body {
+  @apply h-full w-full;
+}
+
+.container-header {
+  @apply bg-slate-900 text-sky-400 h-20 flex items-center justify-around;
+}
+
+.container-header nav {
+  @apply flex items-center justify-around w-2/5;
+}
+
+.container-header h1 {
+  @apply text-4xl;
+}
+
+.container-header a {
+  @apply text-2xl;
+}
+
+
