--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,4 +22,28 @@ html, body {
   @apply text-2xl;
 }
 
+.container-home {
+  @apply p-24;
+
+  h1 {
+    @apply text-3xl font-semibold;
+  }
+
+  .container-dashboard {
+    @apply bg-slate-900 rounded-lg h-auto w-full p-3 grid grid-cols-2 gap-2;
+
+    .container-widgets {
+      @apply border-sky-400 bg-white border-2 rounded-lg h-36 w-full p-2;
+
+      h2 {
+        @apply text-lg font-semibold;
+      }
+
+      p {
+        @apply p-3 text-6xl text-center;
+      }
+    }
+  }
+}
+
 
