--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -46,4 +46,32 @@ html, body {
   }
 }
 
+.container-tasks {
+  @apply p-24;
+
+  h1 {
+    @apply text-3xl font-semibold;
+  }
+
+  .board {
+    @apply mt-5 flex flex-wrap justify-center gap-4;
+
+    .task-card {
+      @apply p-2 min-h-36 max-h-40 min-w-64 max-w-72 border-2 border-black rounded-lg shadow-lg shadow-black flex flex-col justify-around gap-2 hover:scale-105 transition-transform;
+
+      h2 {
+        @apply font-bold;
+      }
+
+      .task-status {
+        @apply bg-sky-200 hover:bg-sky-300 duration-500 border-2 border-black rounded-3xl text-center;
+      }
+
+      .due-date {
+        @apply bg-red-600 text-white rounded-3xl text-center;
+      }
+    }
+  }
+}
+
 
